--- a/package.json
+++ b/package.json
@@ -34,21 +34,21 @@
     "serialize-javascript": "4.0.0",
     "webpack-dev-server": "3.11.0",
     "webpack-merge": "4.2.2",
-    "webpack-node-externals": "1.7.2"
-  },
-  "devDependencies": {
+    "webpack-node-externals": "1.7.2",
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
-    "nodemon": "2.0.4",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
+  },
+  "devDependencies": {
+    "nodemon": "2.0.4"
+
   },
   "scripts": {
     "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
     "dev:build": "webpack --config webpack.server.js --watch",
     "dev:build-client": "webpack --config webpack.client.js --watch",
     "dev": "npm-run-all --parallel dev:*",
-    "start":"npm-run-all --parallel dev:*"
-
+    "start": "npm-run-all --parallel dev:*"
   }
 }
