--- a/package.json
+++ b/package.json
@@ -42,13 +42,12 @@
   },
   "devDependencies": {
     "nodemon": "2.0.4"
-
   },
   "scripts": {
     "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
     "dev:build": "webpack --config webpack.server.js --watch",
     "dev:build-client": "webpack --config webpack.client.js --watch",
     "dev": "npm-run-all --parallel dev:*",
-    "start": "npm-run-all --parallel dev:*"
+    "start": "webpack --config webpack.server.js && webpack --config webpack.client.js"
   }
 }
