--- a/package.json
+++ b/package.json
@@ -48,6 +48,6 @@
     "dev:build": "webpack --config webpack.server.js --watch",
     "dev:build-client": "webpack --config webpack.client.js --watch",
     "dev": "npm-run-all --parallel dev:*",
-    "start": "webpack --config webpack.server.js && webpack --config webpack.client.js"
+    "start": "npm run dev"
   }
 }
