--- a/package.json
+++ b/package.json
@@ -48,9 +48,10 @@
     "dev:build": "webpack --config webpack.server.js --watch",
     "dev:build-client": "webpack --config webpack.client.js --watch",
     "dev": "npm-run-all --parallel dev:*",
-    "prod:server": "node --watch build --exec \"node build/bundle.js\"",
-    "prod:build": "webpack --config webpack.server.js --watch",
-    "prod:build-client": "webpack --config webpack.client.js --watch",
+
+    "prod:server": "node build/bundle.js",
+    "prod:build": "webpack --config webpack.server.js",
+    "prod:build-client": "webpack --config webpack.client.js",
     "start": "npm-run-all --parallel prod:*"
   }
 }
