--- a/package.json
+++ b/package.json
@@ -49,10 +49,10 @@
     "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
     "dev": "npm-run-all --parallel dev:*",
 
-    "prod:build": "webpack --config webpack.server.js",
-    "prod:build-client": "webpack --config webpack.client.js",
-    "prod:server": "node",
+    "prod:server": "nodemon --watch build --exec \"node build/bundle.js\"",
+    "prod:build": "webpack --config webpack.server.js && webpack --config webpack.client.js",
     "prod": "npm-run-all --parallel prod:*",
+    "start": "npm run prod"
 
     "start": "npm run dev"
   }
