--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "dev:server": "nodemon --watch build --exec \"node build/bundle.js\"",
     "dev": "npm-run-all --parallel dev:*",
 
-    "prod:server": "nodemon build --exec \"node build/bundle.js\"",
+    "prod:server": "node build --exec \"node build/bundle.js\"",
     "prod:build": "webpack --config webpack.server.js && webpack --config webpack.client.js",
     "prod": "npm-run-all --parallel prod:*",
     "start": "npm run prod"
